# mcp-cli

./: PRIVACY.md  pyproject.toml  server_config.json
src/mcp/servers/amazon_music/: __init__.py  server.py
src/mcp/servers/amazon_music/client/: __init__.py  amazon_music_client.py
src/mcp/servers/amazon_music/tools/: __init__.py  auth.py  playback.py  playlists.py  search.py  tool_registry.py
src/mcp/servers/amazon_music/utils/: __init__.py  db.py  token_manager.py
src/mcp/servers/openapi/: __init__.py  server.py
src/mcp/servers/openapi/tools/: __init__.py  openapi_sdk.py  tool_registry.py
src/mcp/servers/openapi/utils/: __init__.py  api_client.py  openapi_parser.py
src/mcp/servers/openapi/utils/code_generators/: __init__.py  base.py  javascript.py  python.py  typescript.py
